--- a/components/footer.css
+++ b/components/footer.css
@@ -60,10 +60,9 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
-      position: relative;
       top: 115px;
       align-items: center;
-      left: 10px;
+      left: 0;
     }
     }
       .footer__redes{
